--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,12 +5,20 @@
 /*index*/
 .component{
     display: flex;
+    margin-top: 65px
 }
  .index{
      text-align: center;
      width:50%;
      border-left:1px solid gray;
      border-right:1px solid gray;
+ }
+ .index .serchword{
+     margin-bottom: 10px;
+ }
+ 
+ .category,.team{
+     border:1px solid gray;
  }
  .posts{
     margin:0 auto;
@@ -21,6 +29,9 @@
      margin: 20px;
      background-color: white;
  }
+ .post .title{
+     font-size: 20px;
+ }
  .serch{
      
      text-align: center;
@@ -30,8 +41,21 @@
     text-align: left;
      width:15%;
 }
-.category_index,.team_index{
+.leftbar .post_select{
+     text-align: center;
+     margin-top:15px;
+ } 
+ .leftbar .post_select button{
+     margin: 0 auto;
+     border:1px solid gray;
+     background-color: white;
+     width:50%;
+    margin-bottom: 10px; 
+ }
+ 
+.category_index,.team_index,.post_select{
     text-align: center;
+    margin-top: 20px ;
 }
 .category_index p,.team_index p{
     border-bottom: 1px solid gray
@@ -53,12 +77,18 @@
     background-color: white
 }
 .rightbar table{
-    display: inline
+    display: inline;
+}
+.rightbar th,tr{
+    border:1px solid gray;
+}
+.rightbar td{
+    border-right:1px solid gray;
 }
 /*show,edit_post*/
 .show_component,.edit_component{
     width:50%;
-    margin:0 auto;
+    margin:65px auto;
 }
 
 .show_component .footer,.edit_component .footer{
@@ -94,7 +124,7 @@
 /*create*/
 .create_component{
     width:50%;
-    margin:0 auto;
+    margin:65px auto;
 }
 
 .create_component textarea{
@@ -128,7 +158,7 @@
 /*profile*/
 .profile_component{
     width: 75%;
-    margin: 0 auto;
+    margin:65px auto;
 }
 .profile h2{
     text-align: center;
