--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -42,17 +42,6 @@
     text-align: left;
      width:15%;
 }
-.leftbar .post_select{
-     text-align: center;
-     margin-top:15px;
- } 
- .leftbar .post_select a{
-     margin: 0 auto;
-     border:1px solid gray;
-     background-color: white;
-     width:50%;
-    margin-bottom: 10px; 
- }
  
 .category_index,.team_index,.post_select{
     text-align: center;
@@ -61,7 +50,7 @@
 .category_index p,.team_index p{
     border-bottom: 1px solid gray
 }
-.category_index .category,.team_index .team{
+.category_index .category,.team_index .team,.leftbar .post_select a{
     display:flex;
     flex-direction:column;
     width:60%;
