--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -178,9 +178,20 @@
     text-align: center;
     margin-left: 50px;
 }
-.create_component .save,.footer,.edit_component .update,.footer{
+.create_component .save{
+    text-align: center;
+    background-color:green;
+    width: 25%;
+    
+    margin: 10px auto;
+    color:white;
+}
+.footer{
     text-align: center
 }
+    .edit_component .update{
+        text-align: center
+    }
 /*edit_post*/
 .edit_component .title .input{
     width: auto;
