--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -103,6 +103,10 @@
 .show_component .like{
     border-bottom: 1px solid gray;
 }
+.show_component button{
+    background-color: red;
+    color:white;
+}
 .title_option{
      display: flex;
      justify-content: space-between;
@@ -178,7 +182,7 @@
     text-align: center;
     margin-left: 50px;
 }
-.create_component .save{
+.create_component .save,.edit_component .update{
     text-align: center;
     background-color:green;
     width: 25%;
@@ -199,6 +203,10 @@
 .edit_component .content_body input{
     width:100%;
     height:4.5em;
+}
+.edit_component textarea{
+    width:100%;
+    height:300px;
 }
 /*profile*/
 .profile_component{
