--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -18,7 +18,7 @@
  }
  
  
- .index .category,.index .team{
+ .index .category,.index .team,.profile_component .category,.profile_component .team{
      border:1px solid gray;
      border-radius: 3px;
  }
@@ -193,9 +193,9 @@
 .footer{
     text-align: center
 }
-    .edit_component .update{
-        text-align: center
-    }
+.edit_component .update{
+    text-align: center
+}
 /*edit_post*/
 .edit_component .title .input{
     width: auto;
@@ -210,20 +210,26 @@
 }
 /*profile*/
 .profile_component{
-    width: 75%;
+    width: 50%;
     margin:65px auto;
+    padding-top: 10px;
+}
+.profile{
+    background-color: white;
+    margin-top:10px;
 }
 .profile h2{
     text-align: center;
 }
 .user_info{
-   width:50%;
+   /*width:50%;*/
     margin: 0 auto;
 }
 .user_info p{
     text-align: left;
+    overflow-wrap: break-word;
 }
-.user_favorite{
+.user_favorite,.follow_follower{
     display: flex;
     justify-content: space-evenly;
 }
@@ -236,6 +242,16 @@
 .follow_user button{
     display:block;
 margin:0 auto;
+}
+.follow_user .follow{
+    background-color: white;
+    color:black;
+    border:1px solid black;
+}
+.follow_user .unfollow{
+    background-color: black;
+    color:white;
+     border:1px solid black;
 }
 /*edit_profile*/
 .edit_profile_component{
