App フォローリスト

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -277,3 +277,18 @@ margin:0 auto;
 .edit_profile_component .favorite .favoriteteam,.favoriteplayer{
     margin:0 20px;
 }
+/*follow_follower*/
+.follow_follower_component{
+    width:50%;
+    margin: 65px auto;
+}
+.follow_follower_component .follow,.follow_follower_component .follower{
+   text-align: center;
+   background-color: white;
+   border-radius: 2px;
+   width:50%;
+   margin: 10px auto;
+}
+.list .follows,.list .followers{
+    width: 50%;
+}
