--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+.footer{
+    text-align: center;
+}
+body{
+    background-color: black;
+}
 /*index*/
 .component{
     display: flex;
@@ -26,7 +32,7 @@
     margin:0 auto;
     width:75%;
  }
- .post{
+ .component .post,.profile_component .post{
      text-align: left;
      margin: 20px;
      background-color: white;
@@ -83,19 +89,29 @@
 }
 .swiper-container img{
   width: 100%;
-  height: auto;
+  height: 100%
 }
-
-
+.swiper-slide{
+  /*   display: table-cell;*/
+  /*vertical-align: middle;*/
+  background-color: white;
+ 
+}
 .show_component,.edit_component{
     width:50%;
-    margin:65px auto;
+     margin-top:65px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .img{
-    width:100%;
+    display: table;
+    width:50%;
+    margin-top:65px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.show_component .footer,.edit_component .footer{
-    text-align: center;
+.show_component .post{
+     margin: 20px;
 }
 .show_component .user{
    display: flex;
@@ -162,7 +178,9 @@
 /*create*/
 .create_component{
     width:50%;
-    margin:65px auto;
+    margin-top:65px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .create_component textarea{
@@ -182,7 +200,7 @@
     text-align: center;
     margin-left: 50px;
 }
-.create_component .save,.edit_component .update{
+.create_component .save,.edit_component .update,.edit_profile_component .save_profile{
     text-align: center;
     background-color:green;
     width: 25%;
@@ -190,9 +208,7 @@
     margin: 10px auto;
     color:white;
 }
-.footer{
-    text-align: center
-}
+
 .edit_component .update{
     text-align: center
 }
@@ -211,18 +227,21 @@
 /*profile*/
 .profile_component{
     width: 50%;
-    margin:65px auto;
+    margin-top:65px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 10px;
 }
 .profile{
     background-color: white;
     margin-top:10px;
 }
-.profile h2{
+.profile .user_name,.edit_profile_component .user_name{
     text-align: center;
+    font-size: 30px;
 }
 .user_info{
-   /*width:50%;*/
+   width:50%;
     margin: 0 auto;
 }
 .user_info p{
@@ -258,9 +277,11 @@ margin:0 auto;
 /*edit_profile*/
 .edit_profile_component{
     width:75%;
-    margin:70px auto;
+    margin-top:70px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.edit_profile_component h1,.name{
+.edit_profile_component h1{
    text-align: center;
 }
 .edit_profile_component .info,.image,.back,.save_profile{
@@ -280,7 +301,9 @@ margin:0 auto;
 /*follow_follower*/
 .follow_follower_component{
     width:50%;
-    margin: 65px auto;
+    margin-top:65px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .follow_follower_component .follow,.follow_follower_component .follower{
    text-align: center;
