--- a/resources/css/app.responsive.css
+++ b/resources/css/app.responsive.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  box-sizing:border-box;
+}
+
+/*タブレット*/
+
+
+/*スマホ*/
+@media (max-width:670px){
+    
+}
