App CSS レスポンシブ化　league

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -116,7 +116,7 @@ body{
   background-color: white;
  
 }
-.show_component,.edit_component{
+.show_component,.edit_component,.league_component{
     /*height:100vh;*/
     /*width:50%;*/
     /* margin-top:65px;*/
