--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,18 @@ body{
  .posts{
     margin:0 auto;
  }
+ .post{
+     width: 85%;
+     margin:10px auto;
+ }
+ .post:hover{
+      box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
+ }
+ .serch_button{
+     padding:3px 10px;
+     border-radius:5px;
+     background-color: white;
+ }
 .leftbar{
      margin: 0 auto;
 }
@@ -49,9 +61,14 @@ body{
 }
 .post_option .edit{
     margin: auto 5px;
+    padding:5px 10px;
+    border-radius:5px;
+    
 }
 .post_option .delete{
      margin: auto 5px;
+    padding:5px 10px;
+    border-radius:5px;
 }
 .comment_content{
     margin: 0 auto;
