--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,11 +15,11 @@ body{
  .posts{
     margin:0 auto;
  }
- .post{
+ .component .post,.profile_component .post{
      width: 85%;
      margin:10px auto;
  }
- .post:hover{
+  .component .post:hover,.profile_component .post:hover{
       box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
  }
  .serch_button{
@@ -63,7 +63,13 @@ body{
     margin: auto 5px;
     padding:5px 10px;
     border-radius:5px;
-    
+}
+.show_component .user a{
+    padding:5px 0;
+}
+.show_component .user button{
+    padding:5px 10px;
+    border-radius:5px;
 }
 .post_option .delete{
      margin: auto 5px;
