--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -88,8 +88,10 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.create_component .save,.edit_component .update,.edit_profile_component .save_profile{
-    margin: 10px auto;
+.create_component .save input,.edit_component .update,.edit_profile_component .save_profile{
+    margin: 5px auto;
+    padding:5px 10px;
+    border-radius:5px;
 }
 /*edit_post*/
 .edit_component .title input{
