--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -76,6 +76,9 @@ body{
     padding:5px 10px;
     border-radius:5px;
 }
+.comment{
+    border-radius:5px;
+}
 .comment_content{
     margin: 0 auto;
 }
@@ -88,7 +91,7 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.create_component .save input,.edit_component .update,.edit_profile_component .save_profile{
+.create_component .save input,.edit_component .update input,.edit_profile_component .save_profile{
     margin: 5px auto;
     padding:5px 10px;
     border-radius:5px;
