--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -91,7 +91,7 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-.create_component .save input,.edit_component .update input,.edit_profile_component .save_profile{
+.create_component .save input,.edit_component .update input,.edit_profile_component .save_profile input{
     margin: 5px auto;
     padding:5px 10px;
     border-radius:5px;
@@ -108,7 +108,12 @@ body{
 }
 .profile{
     margin-top:10px;
+    border-radius:5px;
 }
+.profile_component .edit_info button{
+    padding:5px 10px;
+    border-radius:5px;
+} 
 .edit_profile_component .user_name{
     text-align: center;
     font-size: 30px;
@@ -119,6 +124,8 @@ body{
 
 .follow_user button{
 margin:0 auto;
+padding:5px 10px;
+border-radius:5px;
 }
 /*edit_profile*/
 .edit_profile_component{
