--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -140,12 +140,20 @@ border-radius:5px;
     margin-left: auto;
     margin-right: auto;
 }
+.follow_follower_component button{
+    padding:5px 10px;
+    border-radius:5px;
+}
 .follow_follower_component .follows,.follow_follower_component .followers{
     margin: 0 auto;
 }
 .follow_follower_component .follow,.follow_follower_component .follower{
    margin: 10px auto;
     padding: 10px 0;
+    border-radius:5px;
+}
+.follow_follower_component .follow:hover,.follow_follower_component .follower:hover{
+      box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
 }
 .list .follows,.list .followers{
     width: 50%;
