--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -158,3 +158,8 @@ border-radius:5px;
 .list .follows,.list .followers{
     width: 50%;
 }
+.league_component .standings,.league_component .fixtures{
+    padding:0 20px 10px;
+    border-radius:5px;
+    background-color:white;
+}
