--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -52,6 +52,10 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+.body_link,.info_link{
+    color:blue;
+    text-decoration: underline;
+}
 .img{
     margin-left: auto;
     margin-right: auto;
@@ -95,6 +99,11 @@ body{
     margin: 5px auto;
     padding:5px 10px;
     border-radius:5px;
+    box-shadow: 0px 5px #353535;
+}
+.create_component .save input:active,.edit_component .update input:active,.edit_profile_component .save_profile input:active {
+    box-shadow: 0 0;
+    transform: translate(0px, 5px);
 }
 /*edit_post*/
 .edit_component .title input{
@@ -121,7 +130,6 @@ body{
 .user_info{
     margin: 0 auto;
 }
-
 .follow_user button{
 margin:0 auto;
 padding:5px 10px;
