App CSS show 修正

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -22,7 +22,8 @@ body{
   .component .post:hover,.profile_component .post:hover{
       box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
  }
- .component .index .category,.component .index .team,.profile_component .category,.profile_component .team{
+ .component .index .category,.component .index .team,.profile_component .category,.profile_component .team
+ ,.show_component .category,.show_component .team{
     position: relative;
     display: inline-block;
     padding: 0 0.5rem 0 2rem;
@@ -30,7 +31,8 @@ body{
     border-radius: 50px 0 0 50px;
     background: black;
  }
- .component .index .category:before,.component .index .team:before,.profile_component .category:before,.profile_component .team:before{
+ .component .index .category:before,.component .index .team:before,.profile_component .category:before,.profile_component .team:before
+ ,.show_component .category:before,.show_component .team:before{
      position: absolute;
   top: calc(50% - 7px);
   left: 10px;
