--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@ body{
 }
 *{
   box-sizing:border-box;
+ font-family:"Franklin Gothic","Yu Mincho",sans-serif ;
 }
 /*index*/
     .component .posts,.profile_component .posts{
