--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -81,6 +81,9 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+.liked{
+    color:red;
+}
 .post_option{
     justify-content: flex-end;
 }
