--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -91,6 +91,9 @@ body{
     color:blue;
     text-decoration: underline;
 }
+.category_team{
+    margin-top: auto;
+}
 .img{
     margin-left: auto;
     margin-right: auto;
@@ -124,6 +127,10 @@ body{
 }
 .comment_body{
     margin:0 auto;
+}
+.comment_button{
+    padding:5px 10px;
+    border-radius:5px;
 }
 /*create*/
 .create_component{
