--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -138,6 +138,15 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
+.create_component .title input{
+    border:none;
+    border-bottom:1px solid black;
+    background-color: rgb(243 244 246 );
+}
+.create_component .title input:focus{
+    --tw-ring-shadow:none;
+    border-bottom:2px solid blue;
+}
 .create_component .save input,.edit_component .update input,.edit_profile_component .save_profile input{
     margin: 5px auto;
     padding:5px 10px;
@@ -151,6 +160,21 @@ body{
 /*edit_post*/
 .edit_component .title input{
     width: auto;
+}
+.edit_component .content_title input{
+    border:none;
+    border-bottom:1px solid black;
+    background-color: rgb(243 244 246 );
+}
+.edit_component .content_title input:focus{
+    --tw-ring-shadow:none;
+    border-bottom:2px solid blue;
+}
+.create_component .save input,.edit_component .update input,.edit_profile_component .save_profile input{
+    margin: 5px auto;
+    padding:5px 10px;
+    border-radius:5px;
+    box-shadow: 0px 5px #353535;
 }
 /*profile*/
 .profile_component{
