--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -185,6 +185,11 @@ body{
 .profile{
     margin-top:10px;
     border-radius:5px;
+    margin-left: auto;
+    margin-right:auto;
+}
+.profile_component .user_name{
+    margin:auto 0;
 }
 .profile_component .edit_info button{
     padding:5px 10px;
