--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -199,6 +199,11 @@ body{
     text-align: center;
     font-size: 30px;
 }
+.follow_notificate{
+    background-color: lightblue;
+    padding: 5px 0;
+    border-radius: 5px;
+}
 .user_info{
     margin: 0 auto;
 }
@@ -250,3 +255,7 @@ border-radius:5px;
     border-radius:5px;
     background-color:white;
 }
+ .follow_button{
+     outline: 1px solid black;
+  outline-offset: -1px;
+ }
