--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -402,7 +402,7 @@ border-radius:5px;
   line-height: 60px;
   position: relative;
   height: 60px;
-  margin: 2em auto 1em;
+  margin:auto auto;
   text-align: center;
   color: #fff;
   background: 	RoyalBlue;
@@ -445,4 +445,7 @@ border-radius:5px;
     .mypost,.userpost{
     width:300px;
     }
+}
+.fixtures button{
+    margin:auto 0;
 }
