--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,7 +9,14 @@ body{
   box-sizing:border-box;
  font-family:"Franklin Gothic","Yu Mincho",sans-serif ;
 }
-
+.footer{
+    margin:0 auto;
+}
+.footer button{
+    padding:5px 10px;
+    border-radius:10px;
+    background-color: PaleGreen;
+}
 /*index*/
 .create_button{
    
@@ -106,6 +113,9 @@ body{
  }
 .leftbar{
      margin: 0 auto;
+}
+.leftbar a{
+    opacity: 0.7;
 }
 .category_index .category,.team_index .team,.leftbar .post_select a{
     margin: 10px auto;
@@ -338,6 +348,9 @@ border-radius:5px;
     padding: 10px 0;
     border-radius:5px;
     width:350px;
+}
+.toggleButton{
+    margin:0 auto;
 }
 .follow_follower_component .follow:hover,.follow_follower_component .follower:hover{
       box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.4);
